# MinecraftClone

./: .gitignore  CHUNK_OPTIMIZATION.md  CMakeLists.txt  NEW_BLOCKS_README.md  README.md  build.sh  test_chunk_size.cpp  test_comprehensive.cpp
include/: Camera.h  Chunk.h  Player.h  Renderer.h  Shader.h  World.h
shaders/: crosshair.frag  crosshair.vert  fragment.glsl  sun.frag  sun.vert  vertex.glsl
src/: Camera.cpp  Chunk.cpp  Player.cpp  Renderer.cpp  Shader.cpp  World.cpp  main.cpp
